# novelgraph-ai-platform

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README.vi.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml
.codex/: README.md  architecture-map.md  implementation-rules.md  project-context.md  versioning.md
.codex/checklists/: byok-security.md  release-readiness.md
.codex/prompts/: chapter-extraction-contract.md  evidence-grounding.md  translation-contract.md
.codex/tasks/: phase-0-foundation.md  phase-1-backend.md  phase-2-byok.md  phase-3-translation.md  phase-6-frontend.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: README.md  package.json
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  local_runtime.rs  main.rs
crates/api/src/routes/: analysis.rs  byok.rs  health.rs  jobs.rs  local_llm.rs  mod.rs  novels.rs  projects.rs  realtime.rs  translation.rs
crates/api/src/services/: analysis.rs  analysis_alias.rs  analysis_document.rs  analysis_fields.rs  analysis_identity.rs  analysis_identity_review.rs  analysis_mentions.rs  analysis_pipeline.rs  analysis_pipeline_cloud.rs  analysis_relationships.rs  analysis_step.rs  byok.rs  llm_json.rs  llm_structured.rs  mod.rs  novels.rs
crates/storage/: Cargo.toml
crates/storage/migrations/postgres/: 0001_foundation.sql  0002_job_state.sql  0004_analysis_chapter_runs.sql  0005_story_extraction_records.sql  0006_relationship_field_metadata.sql  0007_novel_metadata.sql  0008_byok_provider_config.sql
crates/storage/migrations/sqlite/: 0001_foundation.sql  0002_job_state.sql  0003_project_retention.sql  0004_analysis_chapter_runs.sql  0005_story_extraction_records.sql  0006_relationship_field_metadata.sql  0007_story_character_aliases.sql  0008_novel_metadata.sql  0009_byok_provider_config.sql
crates/storage/src/: error.rs  lib.rs  migrations.rs  sqlite.rs  sqlite_tests.rs
crates/storage/src/repositories/: analysis.rs  byok.rs  mod.rs  story_aliases.rs
docs/: README.md  agentic-automation-and-inline-editing.md  api-contract.md  character-alias-groups.txt  data-model.md  deployment.md  development.md  implementation-plan.md  module-architecture.md  product-requirements.md  security-byok.md  semantic-extraction-audit-2026-04-28.txt  semantic-extraction-audit-proj-019dda1c-2026-04-30.txt  testing-strategy.md
scripts/: dev-stack.bat  dev-stack.ps1  test_character_aliases.py
(+78 files in other folders)
