[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/jobs",
    "crates/ai",
    "crates/api",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/nguyen-hung-dev/novelgraph-ai-platform"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
