[package]
name = "novelgraph-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
novelgraph-ai = { path = "../ai" }
novelgraph-core = { path = "../core" }
novelgraph-storage = { path = "../storage" }
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
reqwest.workspace = true
ring = "0.17"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
